@@ -50,6 +50,11 @@
 	$col=0;
 	while($row=DBfetch($result))
 	{
+                if(!check_right("User","R",$row["userid"]))
+                {
+			continue;
+		}
+
 		if($col++%2==0)	{ echo "<tr bgcolor=#DDDDDD>"; }
 		else		{ echo "<tr bgcolor=#EEEEEE>"; }
 
